--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,29 @@ typings/
 
 # next.js build output
 .next
+
+# dependencies
+node_modules
+
+# coverage
+/coverage
+
+# production
+build*/
+
+# misc
+.DS_Store
+.env*.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.env
+
+# Excel temporary
+~$*.xls*
+
+*.xls*
+
+*.csv
