--- a/server-be/package.json
+++ b/server-be/package.json
@@ -15,11 +15,15 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6-alpha.6",
     "express-group-routes": "^1.1.0",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.19.4"
+    "read-excel-file": "^4.0.4",
+    "sequelize": "^5.19.4",
+    "xlsx": "^0.15.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.3"
