--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
+    "fg-loadcss": "^2.1.0",
     "jshint": "^2.10.2",
     "material-table": "^1.52.0",
     "material-ui-confirm": "^1.0.1",
@@ -20,7 +21,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
